--- a/top-collegues/src/app/app.component.html
+++ b/top-collegues/src/app/app.component.html
@@ -39,7 +39,7 @@
   Le collègue {{savePseudo}} a été ajouté avec succès
 </div>
 
-<div id="listCollegue" class="row">
+<div id="listCollegue" class="card-deck">
   <div *ngFor="let collegue of collegues">
     <app-un-collegue [collegue]=collegue></app-un-collegue>&nbsp;
   </div>
