--- a/top-collegues/src/app/un-collegue/un-collegue.component.html
+++ b/top-collegues/src/app/un-collegue/un-collegue.component.html
@@ -1,8 +1,8 @@
 <div class="card">
   <img class="card-img-top" src={{collegue.urlImage}} />
-  <div class="card-block">
+  <div class="card-block text-center">
     <h4 class="card-title">{{collegue.pseudo}}</h4>
-    <div class="card-text"><strong>{{collegue.score}}</strong></div>
+    <div class="card-text lead"><strong>{{collegue.score}}</strong></div>
     <br />
     <div class="control-group">
       <div class="controls">
