--- a/top-collegues/src/app/app.component.html
+++ b/top-collegues/src/app/app.component.html
@@ -29,18 +29,24 @@
       <div class="control-group">
         <label class="control-label" for="singlebutton"></label>
         <div class="controls">
-          <button (click)="add(pseudo, imageUrl)" id="singlebutton" name="singlebutton" class="btn btn-primary">Ajouter un nouveau Collegue</button>
+          <button type="button" (click)="add(pseudo, imageUrl)" id="singlebutton" name="singlebutton" class="btn btn-primary">Ajouter un nouveau Collegue</button>
         </div>
       </div>
     </fieldset>
   </form>
 </div>
-<div *ngIf="affiche==true" class="alert alert-success" role="alert">
+<div *ngIf="warning" class="alert alert-warning" role="alert">
+  Formulaire imcomplet !!
+</div>
+<div *ngIf="erreur" class="alert alert-danger" role="alert">
+  Le collègue {{savePseudo}} exist déjà
+</div>
+<div *ngIf="affiche" class="alert alert-success" role="alert">
   Le collègue {{savePseudo}} a été ajouté avec succès
 </div>
 
 <div id="listCollegue" class="card-deck">
   <div *ngFor="let collegue of collegues">
-    <app-un-collegue [collegue]=collegue></app-un-collegue>&nbsp;
+    <app-un-collegue [collegue]=collegue (supp)="supp($event)" (change)="sortList($event)"></app-un-collegue>&nbsp;
   </div>
 </div>
