--- a/top-collegues/src/app/un-collegue/un-collegue.component.html
+++ b/top-collegues/src/app/un-collegue/un-collegue.component.html
@@ -1,17 +1,58 @@
-<div class="card">
-  <img class="card-img-top" src={{collegue.imageUrl}} />
+<div *ngIf="cardTemplate" class="card">
+  <a routerLink="/detail/{{collegue.pseudo}}" >
+    <img class="card-img-top" src={{collegue.imageUrl}} />
+  </a>
   <div class="card-block text-center">
     <h4 class="card-title">{{collegue.pseudo}}</h4>
     <div class="card-text lead"><strong>{{collegue.score}}</strong></div>
     <br />
     <div>
+        <div class="row justify-content-md-center">
+          <button (click)="jaime()" id="aime" name="aime" class="btn btn-outline-primary ml-1 mt-1 mr-1">J'aime</button>
+          <button (click)="jedeteste()" id="deteste" name="deteste" class="btn btn-outline-danger ml-1 mt-1 mr-1">Je déteste</button>
+        </div>
+        <div class="row justify-content-md-center">
+          <button (click)="supprimer()" id="supp" name="supp" class="btn btn-outline-warning ml-1 mt-1 mr-1">Supprimer</button>
+        </div>
+      </div> 
+  </div>
+</div>
+
+<tr *ngIf="tableTemplate">
+  <td>
+    <a routerLink="/detail/{{collegue.pseudo}}" >
+      <img class="col-4" src={{collegue.imageUrl}} />
+    </a>
+  </td>
+  <td><h4>{{collegue.pseudo}}</h4></td>
+  <td><div class="card-text lead"><strong>{{collegue.score}}</strong></div></td>
+  <td>
+    <div>
       <div class="row justify-content-md-center">
-        <button (click)="jaime()" id="aime" name="aime" class="btn btn-outline-primary">J'aime</button>
-        <button (click)="jedeteste()" id="deteste" name="deteste" class="btn btn-outline-danger">Je déteste</button>
+        <button (click)="jaime()" id="aime" name="aime" class="btn btn-outline-primary ml-1 mt-1 mr-1">J'aime</button>
+        <button (click)="jedeteste()" id="deteste" name="deteste" class="btn btn-outline-danger ml-1 mt-1 mr-1">Je déteste</button>
       </div>
       <div class="row justify-content-md-center">
         <button (click)="supprimer()" id="supp" name="supp" class="btn btn-outline-warning ml-1 mt-1 mr-1">Supprimer</button>
       </div>
-    </div>  
+    </div> 
+  </td>
+</tr>
+
+<div *ngIf="carouselTemplate" >
+  <a routerLink="/detail/{{collegue.pseudo}}" >
+    <img class="carousimg" src="{{collegue.imageUrl}}">
+  </a>
+  <div class="carousel-caption">
+    <div class="alert-dark">
+      <h4>{{collegue.pseudo}}</h4>
+      <div class="lead"><strong>{{collegue.score}}</strong></div>
+    </div>
+    <br>
+    <div class="row justify-content-md-center">
+      <button (click)="jaime()" id="aime" name="aime" class="btn btn-primary ml-1 mt-1 mr-1">J'aime</button>
+      <button (click)="jedeteste()" id="deteste" name="deteste" class="btn btn-danger ml-1 mt-1 mr-1">Je déteste</button>
+      <button (click)="supprimer()" id="supp" name="supp" class="btn btn-warning ml-1 mt-1 mr-1">Supprimer</button>
+    </div>
   </div>
 </div>
