--- a/top-collegues/src/app/classique/classique.component.html
+++ b/top-collegues/src/app/classique/classique.component.html
@@ -1,8 +1,12 @@
 <app-formulaire (ajout)="addList($event)"></app-formulaire>
-<app-navigation></app-navigation>
+<app-navigation 
+  (limite)="size = $event" 
+  (changeP)="changePseudo = $event" 
+  [tailleMax]="sizeMax">
+</app-navigation>
 <div id="listCollegue" class="card-deck">
   <div app-un-collegue 
-  *ngFor="let collegue of collegues" 
+  *ngFor="let collegue of collegues | filterByPseudo:changePseudo | slice:0:size" 
   [cardTemplate]="true" [collegue]=collegue 
   (supp)="supp($event)" (change)="sortList($event)"></div>&nbsp;
 </div>
