--- a/top-collegues/src/app/page-detail/page-detail.component.html
+++ b/top-collegues/src/app/page-detail/page-detail.component.html
@@ -4,7 +4,7 @@
     <h6>Les meilleurs collègues du moment</h6>
 </div>
 <div class="border">
-  <a routerLink="/classique">< Retour à la vues liste de collègues</a>
+  <a routerLink (click)="historyBack()">< Retour à la vues liste de collègues</a>
 </div>
 <br>
 <div class="card">
