--- a/top-collegues/src/app/un-collegue/un-collegue.component.html
+++ b/top-collegues/src/app/un-collegue/un-collegue.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="cardTemplate" class="card">
-  <a routerLink="/detail/{{collegue.pseudo}}" >
+  <a routerLink="{{ offLine ? '':'/detail/'+collegue.pseudo}}" >
     <img class="card-img-top" src={{collegue.imageUrl}} />
   </a>
   <div class="card-block text-center">
@@ -8,19 +8,25 @@
     <br />
     <div>
         <div class="row justify-content-md-center">
-          <button (click)="jaime()" id="aime" name="aime" class="btn btn-outline-primary ml-1 mt-1 mr-1">J'aime</button>
-          <button (click)="jedeteste()" id="deteste" name="deteste" class="btn btn-outline-danger ml-1 mt-1 mr-1">Je déteste</button>
+          <button (click)="jaime()" id="aime" name="aime" 
+            class="btn btn-outline-primary ml-1 mt-1 mr-1" 
+            [disabled]="offLine">J'aime</button>
+          <button (click)="jedeteste()" id="deteste" name="deteste" 
+            class="btn btn-outline-danger ml-1 mt-1 mr-1" 
+            [disabled]="offLine">Je déteste</button>
         </div>
         <div class="row justify-content-md-center">
-          <button (click)="supprimer()" id="supp" name="supp" class="btn btn-outline-warning ml-1 mt-1 mr-1">Supprimer</button>
+          <button (click)="supprimer()" id="supp" name="supp" 
+            class="btn btn-outline-warning ml-1 mt-1 mr-1"
+            [disabled]="offLine">Supprimer</button>
         </div>
-      </div> 
+      </div>
   </div>
 </div>
 
 <tr *ngIf="tableTemplate">
   <td>
-    <a routerLink="/detail/{{collegue.pseudo}}" >
+    <a routerLink="{{ offLine ? '':'/detail/'+collegue.pseudo}}" >
       <img class="col-4" src={{collegue.imageUrl}} />
     </a>
   </td>
@@ -29,18 +35,24 @@
   <td>
     <div>
       <div class="row justify-content-md-center">
-        <button (click)="jaime()" id="aime" name="aime" class="btn btn-outline-primary ml-1 mt-1 mr-1">J'aime</button>
-        <button (click)="jedeteste()" id="deteste" name="deteste" class="btn btn-outline-danger ml-1 mt-1 mr-1">Je déteste</button>
+        <button (click)="jaime()" id="aime" name="aime" 
+          class="btn btn-outline-primary ml-1 mt-1 mr-1"
+          [disabled]="offLine">J'aime</button>
+        <button (click)="jedeteste()" id="deteste" name="deteste" 
+          class="btn btn-outline-danger ml-1 mt-1 mr-1"
+          [disabled]="offLine">Je déteste</button>
       </div>
       <div class="row justify-content-md-center">
-        <button (click)="supprimer()" id="supp" name="supp" class="btn btn-outline-warning ml-1 mt-1 mr-1">Supprimer</button>
+        <button (click)="supprimer()" id="supp" name="supp" 
+          class="btn btn-outline-warning ml-1 mt-1 mr-1"
+          [disabled]="offLine">Supprimer</button>
       </div>
     </div> 
   </td>
 </tr>
 
 <div *ngIf="carouselTemplate" >
-  <a routerLink="/detail/{{collegue.pseudo}}" >
+  <a routerLink="{{ offLine ? '':'/detail/'+collegue.pseudo}}" >
     <img class="carousimg" src="{{collegue.imageUrl}}">
   </a>
   <div class="carousel-caption">
@@ -50,9 +62,15 @@
     </div>
     <br>
     <div class="row justify-content-md-center">
-      <button (click)="jaime()" id="aime" name="aime" class="btn btn-primary ml-1 mt-1 mr-1">J'aime</button>
-      <button (click)="jedeteste()" id="deteste" name="deteste" class="btn btn-danger ml-1 mt-1 mr-1">Je déteste</button>
-      <button (click)="supprimer()" id="supp" name="supp" class="btn btn-warning ml-1 mt-1 mr-1">Supprimer</button>
+      <button (click)="jaime()" id="aime" name="aime" 
+        class="btn btn-primary ml-1 mt-1 mr-1"
+        [disabled]="offLine">J'aime</button>
+      <button (click)="jedeteste()" id="deteste" name="deteste" 
+        class="btn btn-danger ml-1 mt-1 mr-1"
+        [disabled]="offLine">Je déteste</button>
+      <button (click)="supprimer()" id="supp" name="supp" 
+        class="btn btn-warning ml-1 mt-1 mr-1"
+        [disabled]="offLine">Supprimer</button>
     </div>
   </div>
 </div>
