--- a/top-collegues/src/app/un-collegue/un-collegue.component.html
+++ b/top-collegues/src/app/un-collegue/un-collegue.component.html
@@ -16,23 +16,25 @@
             [disabled]="offLine">Je déteste</button>
         </div>
         <div class="row justify-content-md-center">
-          <button (click)="supprimer()" id="supp" name="supp" 
-            class="btn btn-outline-warning ml-1 mt-1 mr-1"
-            [disabled]="offLine">Supprimer</button>
-        </div>
+          <button (click)="passCollegue()"
+            data-toggle="modal" data-target="#myModal"
+            id="commentaire" name="commentaire" 
+            class="btn btn-outline-success ml-1 mt-1 mr-1" 
+            [disabled]="offLine">Rédiger un commentaire</button>
+        </div>        
       </div>
   </div>
 </div>
 
 <tr *ngIf="tableTemplate">
-  <td>
+  <td class="col">
     <a routerLink="{{ offLine ? '':'/detail/'+collegue.pseudo}}" >
       <img class="col-4" src={{collegue.imageUrl}} />
     </a>
   </td>
-  <td><h4>{{collegue.pseudo | uppercase}}</h4></td>
-  <td><div class="card-text lead"><strong [innerHTML]="collegue.score | score"></strong></div></td>
-  <td>
+  <td class="col"><h4>{{collegue.pseudo | uppercase}}</h4></td>
+  <td class="col-4"><div class="card-text lead"><strong [innerHTML]="collegue.score | score"></strong></div></td>
+  <td class="col-4">
     <div>
       <div class="row justify-content-md-center">
         <button (click)="jaime()" id="aime" name="aime" 
@@ -43,9 +45,11 @@
           [disabled]="offLine">Je déteste</button>
       </div>
       <div class="row justify-content-md-center">
-        <button (click)="supprimer()" id="supp" name="supp" 
-          class="btn btn-outline-warning ml-1 mt-1 mr-1"
-          [disabled]="offLine">Supprimer</button>
+        <button (click)="passCollegue()"
+          data-toggle="modal" data-target="#myModal"
+          id="commentaire" name="commentaire" 
+          class="btn btn-outline-success ml-1 mt-1 mr-1" 
+          [disabled]="offLine">Rédiger un commentaire</button>
       </div>
     </div> 
   </td>
@@ -68,9 +72,13 @@
       <button (click)="jedeteste()" id="deteste" name="deteste" 
         class="btn btn-danger ml-1 mt-1 mr-1"
         [disabled]="offLine">Je déteste</button>
-      <button (click)="supprimer()" id="supp" name="supp" 
-        class="btn btn-warning ml-1 mt-1 mr-1"
-        [disabled]="offLine">Supprimer</button>
+    </div>
+    <div class="row justify-content-md-center">
+      <button (click)="passCollegue()"
+        data-toggle="modal" data-target="#myModal"
+        id="commentaire" name="commentaire" 
+        class="btn btn-success ml-1 mt-1 mr-1" 
+        [disabled]="offLine">Rédiger un commentaire</button>
     </div>
   </div>
 </div>
